--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 				<!-- Intro -->
 					<div id="intro">
 						<h1>Muthuselvi Manikavasakam</h1>
-						<p>Data Analytical Skills & Projects</p>
+						<p>Ruthless Data Cleaner | Data Storyteller | Skilled in deriving ground-breaking insights</p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
 						</ul>
