--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		<!-- Header -->
 			<header id="header">
 				<div class="inner">
-					<a href="#" class="image avatar"><img src="images/MS_.jpg" alt="" /></a>
+					<a href="#" class="image avatar"><img src="images/MS_.JPG" alt="" /></a>
 					<h1><strong>Muthuselvi Manikavasakam</strong> </h1>
 					<h2>Data Analytics Enthusiast</h2>
 					<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
